--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
 </head>
 <body>
   <base href="/">
-  <app>Loading…</app>
+  <app>
+    <div class="loading">Loading…</div>
+  </app>
 </body>
 </html>
